Fix component layout on mobile

--- a/site/src/layouts/DetailComponent/DetailComponent.module.css
+++ b/site/src/layouts/DetailComponent/DetailComponent.module.css
@@ -28,3 +28,7 @@
 .overlay {
   max-width: 100vw;
 }
+
+.content {
+  width: 100%;
+}
